# fmsolver

./: .gitignore  README.md  download.py  evaluate.py  missing.py  pyproject.toml
fmsolver/: __init__.py  player.py  position.py  squad.py  team.py
